Grade C, not grade of C

--- a/app/views/new/eligibility.html
+++ b/app/views/new/eligibility.html
@@ -20,7 +20,7 @@
           * Do not accept applications from candidates who need to take an equivalence test
           * Do not accept applications from candidates who do not have the qualification but expect to have it before the course begins -->
 
-        <p>All applicants need a minimum GCSE grade of C (or 4), or an equivalent,&nbsp;in:</p>
+        <p>All applicants need a minimum GCSE grade C (or 4), or an equivalent,&nbsp;in:</p>
         <ul class="govuk-list govuk-list--bullet">
           <li>English</li>
           <li>Mathematics</li>
