--- a/app/views/new/ucas-not-yet-got.html
+++ b/app/views/new/ucas-not-yet-got.html
@@ -20,7 +20,7 @@
           * Do not accept applications from candidates who need to take an equivalence test
           * Do not accept applications from candidates who do not have the qualification but expect to have it before the course begins -->
 
-        <p>By law, all applicants need a GCSE grade of C (or level 4), or an equivalent,&nbsp;in:</p>
+        <p>By law, all applicants need a GCSE grade C (or level 4), or an equivalent,&nbsp;in:</p>
         <ul class="govuk-list govuk-list--bullet">
           <li>English</li>
           <li>Mathematics</li>
