--- a/app/views/transition.html
+++ b/app/views/transition.html
@@ -26,7 +26,7 @@
 
         <hr class="govuk-section-break govuk-section-break--m" />
 
-        <a href="/rolled-over" class="govuk-button">Continue</a>
+        <a href="/" class="govuk-button">Continue</a>
       </div>
     </div>
   </div>
