--- a/app/views/new/_answers.html
+++ b/app/views/new/_answers.html
@@ -79,6 +79,27 @@
 {% endif %}
 <div class="govuk-summary-list__row">
   <dt class="govuk-summary-list__key">
+    Age range
+  </dt>
+  <dd class="govuk-summary-list__value">
+    {% if data[code + '-age-range'] == 'Another age range' %}
+      {{ data[code + '-age-youngest'] }} to {{ data[code + '-age-oldest'] }}
+    {% else %}
+      {{ data[code + '-age-range'] }}
+    {% endif %}
+  </dd>
+  {% if showChangeLinks %}
+  <dd class="govuk-summary-list__actions">
+    {% if isNotPublished %}
+    <a href="/new/{{ code }}/age-range?change=age-range">
+      Change<span class="govuk-visually-hidden"> subject</span>
+    </a>
+    {% endif %}
+  </dd>
+  {% endif %}
+</div>
+<div class="govuk-summary-list__row">
+  <dt class="govuk-summary-list__key">
     Outcome
   </dt>
   <dd class="govuk-summary-list__value">
