Explain course outcomes

--- a/app/views/new/outcome.html
+++ b/app/views/new/outcome.html
@@ -15,19 +15,19 @@
         {% set fields = [
             {
               name: 'PGCE with QTS',
-              text: 'Postgraduate certificate in education with qualified teacher status'
+              text: 'Applicants must complete a PGCE'
             },
             {
               name: 'QTS',
-              text: 'Qualified teacher status'
+              text: 'Applicants will study for QTS without PGCE'
             },
             {
               name: 'QTS with optional PGCE',
-              text: 'Qualified teacher status with optional postgraduate certificate in education'
+              text: 'Applicants can choose to take the PGCE or not'
             },
             {
               name: 'PGDE with QTS',
-              text: 'Postgraduate diploma in education with qualified teacher status'
+              text: 'Postgraduate diploma in education with qualified teacher status.<br />Applicants must complete a PGDE.'
             }
           ]
         %}
