Describe what's beneath each course tab
Need to use pointer events none because of bug in tabs component:
https://github.com/alphagov/govuk-frontend/issues/1252

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -303,7 +303,7 @@ dl.aligned.course-part-tasks dd {
   .govuk-tabs__tab {
     font-weight: bold;
     color: $govuk-link-colour;
-    text-decoration: underline;
+    text-align: left;
   }
 
   .govuk-tabs__tab--selected {
