Add courses, not request
Request is too similar to the allocations process

--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -91,7 +91,7 @@
           {% if not data['next-cycle'] %}
           <li>manage vacancies for each course</li>
           {% endif %}
-          <li>request new courses</li>
+          <li>add new courses</li>
         </ul>
       </div>
 
