--- a/app/views/courses.html
+++ b/app/views/courses.html
@@ -30,15 +30,15 @@
         <li>preview and publish courses</li>
         <li>write about each course</li>
         <li>copy content between courses</li>
-        <li>request new courses</li>
+        <li>add new courses</li>
       </ul>
     </div>
   </div>
 
   {% if data['ucasCourses'].length > 10 %}
     <div class="add-top-margin">
-      <a href="{{ newCourseFormUrl }}" class="govuk-button" target="_blank">Request a new course</a>
-      <p class="govuk-body-s govuk-!-margin-bottom-6" style="margin-top: -20px">You’ll be taken to a Google Form to make this request.</p>
+      <a href="{{ newCourseFormUrl }}" class="govuk-button" target="_blank">Add a new course</a>
+      <p class="govuk-body-s govuk-!-margin-bottom-6" style="margin-top: -20px">You’ll be taken to a Google Form to fill in your course details.</p>
     </div>
   {% endif %}
 
@@ -122,7 +122,7 @@
   {% endif %}
 
   <div class="add-top-margin">
-    <a href="{{ newCourseFormUrl }}" class="govuk-button" target="_blank">Request a new course</a>
-    <p class="govuk-body-s govuk-!-margin-bottom-6" style="margin-top: -20px">You’ll be taken to a Google Form to complete this request.</p>
+    <a href="{{ newCourseFormUrl }}" class="govuk-button" target="_blank">Add a new course</a>
+    <p class="govuk-body-s govuk-!-margin-bottom-6" style="margin-top: -20px">You’ll be taken to a Google Form to fill in your course details.</p>
   </div>
 {% endblock %}
