--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -323,3 +323,58 @@ dl.aligned.course-part-tasks dd {
     padding: 30px 0 0;
   }
 }
+
+.timeline {
+  padding-left: 0;
+  list-style-type: none;
+
+  .edition-timeline {
+    padding-left: 0;
+    list-style-type: none;
+  }
+
+  .timeline-day-wrapper {
+    border-left: 5px solid govuk-colour("grey-2");
+    position: relative;
+    margin-top: 10px;
+  }
+
+  .timeline-day {
+    margin-bottom: 40px;
+    padding-left: 30px;
+    position: relative;
+    top: -10px;
+
+    &:before {
+      content: " ";
+      height: 5px;
+      width: 15px;
+      background: govuk-colour("grey-2");
+      display: inline-block;
+      position: absolute;
+      top: 10px;
+      left: 0;
+    }
+  }
+
+  .events {
+    padding-left: 0;
+    list-style-type: none;
+  }
+
+  .event {
+    margin-bottom: 20px;
+    &:last-child {
+      margin-bottom: 0;
+    }
+    h4 {
+      margin-bottom: 0;
+    }
+  }
+
+  .metadata {
+    color: $govuk-secondary-text-colour;
+    display: inline-block;
+    margin-bottom: 5px;
+  }
+}
