--- a/app/views/course.html
+++ b/app/views/course.html
@@ -221,6 +221,124 @@
     </ul>
   {% endset %}
 
+  {% set historyHtml %}
+    <!-- <h2 class="govuk-heading-l govuk-!-margin-top-6 govuk-!-margin-bottom-8">2020&thinsp;–&thinsp;2021 cycle</h2>
+    <ul class="timeline">
+      <li class="edition">
+        <ul class="edition-timeline">
+          <div class="timeline-day-wrapper">
+            <li class="timeline-day">
+              <h3 class="govuk-heading-m">15 January 2019</h3>
+              <ul class="events">
+                <li class="event">
+                  <h4 class="govuk-heading-s">Published</h4>
+                  <span class="metadata">7:03pm by Jane Doe</span>
+                </li>
+              </ul>
+            </li>
+            <li class="timeline-day">
+              <h3 class="govuk-heading-m">14 April 2019</h3>
+              <ul class="events">
+                <li class="event">
+                  <h4 class="govuk-heading-s">Rolled over from previous cycle</h4>
+                  <span class="metadata">10:25pm by Department for Education</span>
+                </li>
+              </ul>
+            </li>
+          </div>
+        </ul>
+      </li>
+    </ul> -->
+
+    <ul class="timeline">
+      <li class="edition">
+        <ul class="edition-timeline">
+          <div class="timeline-day-wrapper">
+            <li class="timeline-day">
+              <h3 class="govuk-heading-m timeline-day-heading">15 January 2019</h3>
+              <ul class="events">
+                <li class="event">
+                  <h4 class="govuk-heading-l">Published</h4>
+                  <span class="metadata">7:03pm by Jane Doe</span>
+                </li>
+              </ul>
+            </li>
+            <li class="timeline-day">
+              <h3 class="govuk-heading-m timeline-day-heading">14 January 2019</h3>
+              <ul class="events">
+                <li class="event">
+                  <h4 class="govuk-heading-s">About this course updated</h4>
+                  <span class="metadata">10:25pm by Jane Doe</span>
+                </li>
+                <li class="event">
+                  <h4 class="govuk-heading-s">Course length and fees updated</h4>
+                  <span class="metadata">10:25pm by Jane Doe</span>
+                </li>
+                <li class="event">
+                  <h4 class="govuk-heading-s">Requirements and eligibility updated</h4>
+                  <span class="metadata">10:25pm by Jane Doe</span>
+                </li>
+              </ul>
+            </li>
+            <li class="timeline-day">
+              <h3 class="govuk-heading-m timeline-day-heading">15 December 2018</h3>
+              <ul class="events">
+                <li class="event">
+                  <h4 class="govuk-heading-s">Vacancies edited, applications reopened</h4>
+                  <span class="metadata">10:25pm by Jane Doe</span>
+                </li>
+              </ul>
+            </li>
+            <li class="timeline-day">
+              <h3 class="govuk-heading-m timeline-day-heading">13 December 2018</h3>
+              <ul class="events">
+                <li class="event">
+                  <h4 class="govuk-heading-s">No vacancies, applications closed</h4>
+                  <span class="metadata">10:25pm by Jane Doe</span>
+                </li>
+              </ul>
+            </li>
+            <li class="timeline-day">
+              <h3 class="govuk-heading-m timeline-day-heading">3 November 2018</h3>
+              <ul class="events">
+                <li class="event">
+                  <h4 class="govuk-heading-s">Vacancies edited</h4>
+                  <span class="metadata">10:25pm by Jane Doe</span>
+                </li>
+              </ul>
+            </li>
+            <li class="timeline-day">
+              <h3 class="govuk-heading-m timeline-day-heading">10 October 2018</h3>
+              <ul class="events">
+                <li class="event">
+                  <h4 class="govuk-heading-l">First published</h4>
+                  <span class="metadata">7:03pm by Jane Doe</span>
+                </li>
+              </ul>
+            </li>
+            <li class="timeline-day">
+              <h3 class="govuk-heading-m timeline-day-heading">14 August 2019</h3>
+              <ul class="events">
+                <li class="event">
+                  <h4 class="govuk-heading-s">About this course updated</h4>
+                  <span class="metadata">10:25pm by Jane Doe</span>
+                </li>
+                <li class="event">
+                  <h4 class="govuk-heading-s">Course length and fees updated</h4>
+                  <span class="metadata">10:25pm by Jane Doe</span>
+                </li>
+                <li class="event">
+                  <h4 class="govuk-heading-s">Requirements and eligibility updated</h4>
+                  <span class="metadata">10:25pm by Jane Doe</span>
+                </li>
+              </ul>
+            </li>
+          </div>
+        </ul>
+      </li>
+    </ul>
+  {% endset %}
+
   <div class="course-tabs">
     {{ govukTabs({
       items: [
@@ -236,6 +354,13 @@
           id: "information",
           panel: {
             html: informationHtml
+          }
+        },
+        {
+          label: 'History<br /><span style="pointer-events: none" class="govuk-body-s govuk-!-font-weight-regular">Who changed what, and when</span>' | safe,
+          id: "history",
+          panel: {
+            html: historyHtml
           }
         }
       ]
