Use MVP add location Google form

--- a/app/views/locations.html
+++ b/app/views/locations.html
@@ -77,9 +77,10 @@
         </tbody>
       </table>
 
-      <p class="add-top-margin">
-        <a href="/location/start" class="govuk-button">Add a location</a>
-      </p>
+      <div class="add-top-margin">
+        <a href="https://forms.gle/Bvkuf6JMY8kPVHPNA" class="govuk-button">Add a location</a>
+        <p class="govuk-body-s govuk-!-margin-bottom-6" style="margin-top: -20px">You’ll be taken to a Google Form to fill in your location details.</p>
+      </div>
     </div>
   </div>
 {% endblock %}
