--- a/app/views/locations.html
+++ b/app/views/locations.html
@@ -87,7 +87,7 @@
       </table>
 
       <div class="add-top-margin">
-        <a href="https://forms.gle/Bvkuf6JMY8kPVHPNA" class="govuk-button">Add a location</a>
+        <a href="https://forms.gle/Bvkuf6JMY8kPVHPNA" target="_blank" class="govuk-button">Add a location</a>
         <p class="govuk-body-s govuk-!-margin-bottom-6" style="margin-top: -20px">You’ll be taken to a Google Form to fill in your location details.</p>
       </div>
     </div>
