Add link to video in footer

--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -72,6 +72,10 @@
       meta: {
         items: [
           {
+            href: "https://www.youtube.com/watch?v=nxmtXGy1cCY",
+            text: "Video (YouTube)"
+          },
+          {
             href: "/cycles",
             text: "Cycles"
           },
