Tweak can't edit content

--- a/app/views/course.html
+++ b/app/views/course.html
@@ -194,11 +194,11 @@
           <p>You can change every detail of this course before it’s published.</p>
           <p>After it’s published, you can only change some details – as candidates may have started applying for it</p>
         {% else %}
-          <p>You can only change some details of this course because it has been published and candidates may have started applying for it.</p>
+          <p>You can only change some details of this course – this is because it’s been published, and candidates may have started applying for it.</p>
 
-          <p>If you need to make significant changes to this course you should consider <a href="#">withdrawing it</a>, and creating a new course.</p>
+          <p>If you need to make significant changes to this course, you should consider <a href="#">withdrawing it</a> and creating a new course instead.</p>
 
-          <p>Alternatively, to make other changes you should <a href="#">contact the Becoming a teacher team</a>.</p>
+          <p>To make any other changes, <a href="#">contact the Becoming a teacher team</a>.</p>
         {% endif %}
       </div>
     </div>
