Split UCAS eligibility questions over two pages

--- a/app/views/new/_answers.html
+++ b/app/views/new/_answers.html
@@ -251,7 +251,7 @@
   </dd>
   {% if showChangeLinks %}
   <dd class="govuk-summary-list__actions">
-    <a href="/new/{{ code }}/ucas-not-yet-got?change=ucas-not-yet-got">
+    <a href="/new/{{ code }}/minimum-gcses?change=minimum-gcses">
       Change<span class="govuk-visually-hidden"> minimum requirements</span>
     </a>
   </dd>
@@ -276,7 +276,7 @@
   </dd>
   {% if showChangeLinks %}
   <dd class="govuk-summary-list__actions">
-    <a href="/new/{{ code }}/ucas-not-yet-got?change=ucas-not-yet-got">
+    <a href="/new/{{ code }}/equivalency-tests?change=equivalency-tests">
       Change<span class="govuk-visually-hidden"> minimum requirements</span>
     </a>
   </dd>
