--- a/app/views/location.html
+++ b/app/views/location.html
@@ -115,6 +115,90 @@
       </table>
     {% endset %}
 
+    {% set historyHtml %}
+      <!-- <h2 class="govuk-heading-l govuk-!-margin-top-6 govuk-!-margin-bottom-8">2020&thinsp;–&thinsp;2021 cycle</h2>
+      <ul class="timeline">
+        <li class="edition">
+          <ul class="edition-timeline">
+            <div class="timeline-day-wrapper">
+              <li class="timeline-day">
+                <h3 class="govuk-heading-m">15 January 2019</h3>
+                <ul class="events">
+                  <li class="event">
+                    <h4 class="govuk-heading-s">Published</h4>
+                    <span class="metadata">7:03pm by Jane Doe</span>
+                  </li>
+                </ul>
+              </li>
+              <li class="timeline-day">
+                <h3 class="govuk-heading-m">14 April 2019</h3>
+                <ul class="events">
+                  <li class="event">
+                    <h4 class="govuk-heading-s">Rolled over from previous cycle</h4>
+                    <span class="metadata">10:25pm by Department for Education</span>
+                  </li>
+                </ul>
+              </li>
+            </div>
+          </ul>
+        </li>
+      </ul> -->
+
+      <ul class="timeline">
+        <li class="edition">
+          <ul class="edition-timeline">
+            <div class="timeline-day-wrapper">
+              <li class="timeline-day">
+                <h3 class="govuk-heading-m timeline-day-heading">14 January 2019</h3>
+                <ul class="events">
+                  <li class="event">
+                    <h4 class="govuk-heading-l">Renamed to Main Site</h4>
+                    <span class="metadata">10:25pm by Jane Doe</span>
+                  </li>
+                </ul>
+              </li>
+              <li class="timeline-day">
+                <h3 class="govuk-heading-m timeline-day-heading">15 December 2018</h3>
+                <ul class="events">
+                  <li class="event">
+                    <h4 class="govuk-heading-s">Removed from 8 courses</h4>
+                    <span class="metadata">10:25pm by Jane Doe</span>
+                  </li>
+                </ul>
+              </li>
+              <li class="timeline-day">
+                <h3 class="govuk-heading-m timeline-day-heading">13 December 2018</h3>
+                <ul class="events">
+                  <li class="event">
+                    <h4 class="govuk-heading-s">Added to 7 courses</h4>
+                    <span class="metadata">10:25pm by Jane Doe</span>
+                  </li>
+                </ul>
+              </li>
+              <li class="timeline-day">
+                <h3 class="govuk-heading-m timeline-day-heading">3 November 2018</h3>
+                <ul class="events">
+                  <li class="event">
+                    <h4 class="govuk-heading-s">Added to course Primary (X100)</h4>
+                    <span class="metadata">10:25pm by Jane Doe</span>
+                  </li>
+                </ul>
+              </li>
+              <li class="timeline-day">
+                <h3 class="govuk-heading-m timeline-day-heading">10 October 2018</h3>
+                <ul class="events">
+                  <li class="event">
+                    <h4 class="govuk-heading-l">Pool Hayes School added</h4>
+                    <span class="metadata">7:03pm by Jane Doe</span>
+                  </li>
+                </ul>
+              </li>
+            </div>
+          </ul>
+        </li>
+      </ul>
+    {% endset %}
+
     <div class="course-tabs">
       {{ govukTabs({
         items: [
